osmfoundation.less
/* ... */
#jump-to-nav {
    background-color: white;
    position: absolute;
    top: 0;
    left: 0;
    margin: 0;
    padding: 0 10px;

    a {
        line-height: 40px;
    }
}

.main-wrapper {
    background-color: #fff;
}

main.mw-body {
    border: 0;
    color: @text-color;
    max-width: 1000px;
    margin: auto;
    font-size: 1.18em;
    padding-top: 20px;
    padding-bottom: 40px;

    @media (min-width: 576px) {
        padding-top: 50px;
        padding-bottom: 80px;
    }

    .mw-body-content {
        p {
            margin: 1em 0;
        }

        a {
            color: darken(@brand-primary, 60%);
            text-decoration: underline;

            &:visited {
                color: desaturate(darken(@brand-primary, 40%), 10%);
            }

            &:focus,
            &:active {
                color: darken(@brand-primary, 80%);
            }

            &.external {
                padding-right: 0;
                background-image: none;
            }

            &.new {
                color: @new-link-color;
            }
        }

        ul {
            list-style: none;
            list-style-image: none;

            li {
                position: relative;

                &::before {
                    content: '';
                    display: block;
                    width: 5px;
                    height: 5px;
                    border-radius: 20px;
                    background-color: @text-color;
                    position: absolute;
                    top: 12px;
                    left: -15px;
                }
            }
        }

        #toc,
        #mw-normal-catlinks {
            & ul li::before {
                width: 0;
            }
        }
    }
}

#mw-personal #p-personal {
    position: static;
}

.logo {
    background-image: url('img/logo.png');
}

.mainnav {
    margin: 0;
    list-style: none;
    height: 100%;
    border-top: 1px solid desaturate(darken(@brand-primary, 20%), 10%);
    border-bottom: 1px solid transparent;
    display: none;

    @media (min-width: 900px) {
        display: flex !important;
        align-items: stretch;
        margin-left: 350px;
        border: 0;
    }

    li {
        display: block;
        height: 100%;

        @media (min-width: 900px) {
            display: inline-block;
        }

        a {
            display: block;
            height: 100%;
            color: @text-color;
            font-size: 1.1em;
            padding: 10px 20px;

            &:hover,
            &:focus {
                text-decoration: none;
                background-color: darken(@brand-primary, 5%);
            }

            @media (min-width: 900px) {
                text-align: center;
                font-size: 1.2em;
                min-width: 70px;
                line-height: 120px;
                padding: 0 10px;
            }
        }
    }
}
/* ... */

